Make use of multiple memcpy engines
This updates the Async and Remote interfaces so that we can transfer between devices at the ArrayData granularity. This change allows us to transfer each of the components of an array of tuples (and the components in a collection of Arrays) in individual streams.

--- a/accelerate-llvm-multidev/accelerate-llvm-multidev.cabal
+++ b/accelerate-llvm-multidev/accelerate-llvm-multidev.cabal
@@ -52,12 +52,12 @@ library
 
   other-modules:
     Data.Array.Accelerate.LLVM.Multi.Array.Data
+    Data.Array.Accelerate.LLVM.Multi.Async
     Data.Array.Accelerate.LLVM.Multi.Compile
     Data.Array.Accelerate.LLVM.Multi.State
     Data.Array.Accelerate.LLVM.Multi.Target
 
     Data.Array.Accelerate.LLVM.Multi.Execute
-    Data.Array.Accelerate.LLVM.Multi.Execute.Async
     Data.Array.Accelerate.LLVM.Multi.Execute.Environment
 
   build-depends:
