Reimplement sequences execution loop and scheduler logic
This is an attempt to fix the poor performance of sequences execution. The core execution loop itself is simplified somewhat, and in particular the scheduler logic for selecting the size of each chunk is significantly changed; see note: [Sequence chunk size decision strategy]

--- a/accelerate-llvm/accelerate-llvm.cabal
+++ b/accelerate-llvm/accelerate-llvm.cabal
@@ -121,6 +121,7 @@ Library
         , llvm-hs-pure                  >= 3.9
         , mtl                           >= 2.0
         , mwc-random                    >= 0.13
+        , time                          >= 1.4
         , unordered-containers          >= 0.2
         , vector                        >= 0.10
 
