--- a/accelerate-llvm-ptx/accelerate-llvm-ptx.cabal
+++ b/accelerate-llvm-ptx/accelerate-llvm-ptx.cabal
@@ -153,6 +153,7 @@ Library
         , file-embed                    >= 0.0.8
         , filepath                      >= 1.0
         , hashable                      >= 1.2
+        , lens                          >= 4.0
         , llvm-hs                       >= 4.1 && < 6.3
         , llvm-hs-pure                  >= 4.1 && < 6.3
         , mtl                           >= 2.2.1
