--- a/accelerate-llvm-ptx/accelerate-llvm-ptx.cabal
+++ b/accelerate-llvm-ptx/accelerate-llvm-ptx.cabal
@@ -115,14 +115,14 @@ Library
     Data.Array.Accelerate.LLVM.PTX.CodeGen
     Data.Array.Accelerate.LLVM.PTX.CodeGen.Base
     Data.Array.Accelerate.LLVM.PTX.CodeGen.Fold
-    Data.Array.Accelerate.LLVM.PTX.CodeGen.FoldSeg
+    -- Data.Array.Accelerate.LLVM.PTX.CodeGen.FoldSeg
     Data.Array.Accelerate.LLVM.PTX.CodeGen.Generate
     Data.Array.Accelerate.LLVM.PTX.CodeGen.Intrinsic
     Data.Array.Accelerate.LLVM.PTX.CodeGen.Loop
     Data.Array.Accelerate.LLVM.PTX.CodeGen.Map
-    Data.Array.Accelerate.LLVM.PTX.CodeGen.Permute
+    -- Data.Array.Accelerate.LLVM.PTX.CodeGen.Permute
     -- Data.Array.Accelerate.LLVM.PTX.CodeGen.Queue
-    Data.Array.Accelerate.LLVM.PTX.CodeGen.Scan
+    -- Data.Array.Accelerate.LLVM.PTX.CodeGen.Scan
 
     Data.Array.Accelerate.LLVM.PTX.Compile
     Data.Array.Accelerate.LLVM.PTX.Compile.Cache
