--- a/stack-8.6.yaml
+++ b/stack-8.6.yaml
@@ -68,10 +68,6 @@ extra-deps:
 - git:    https://github.com/tmcdonell/hs-memory.git
   commit: feee6256e19ed178dc75b071dc54983bc6320f26
 
-- base-compat-0.10.4
-- code-page-0.1.3
-- ghc-paths-0.1.0.9
-- syb-0.7
 - abstract-deque-0.3
 - adjunctions-4.4
 - ansi-terminal-0.8.1
@@ -79,6 +75,7 @@ extra-deps:
 - async-2.2.1
 - atomic-primops-0.8.2
 - attoparsec-0.13.2.2
+- base-compat-0.10.4
 - base-orphans-0.8
 - basement-0.0.8
 - bifunctors-5.5.3
@@ -86,6 +83,7 @@ extra-deps:
 - call-stack-0.1.0
 - cereal-0.5.7.0
 - clock-0.7.2
+- code-page-0.1.3
 - colour-2.3.4
 - comonad-5.0.4
 - concurrent-output-1.10.6
@@ -100,6 +98,7 @@ extra-deps:
 - file-embed-0.0.11
 - foundation-0.0.21
 - free-5.1
+- ghc-paths-0.1.0.9
 - half-0.3
 - happy-1.19.9
 - hashable-1.2.7.0
@@ -109,6 +108,7 @@ extra-deps:
 - integer-logarithms-1.0.2.2
 - invariant-0.5.1
 - kan-extensions-5.2
+- language-c-0.8.2
 - lens-4.17
 - libffi-0.1
 - lifted-async-0.10.0.2
@@ -131,6 +131,7 @@ extra-deps:
 - semigroupoids-5.3.1
 - semigroups-0.18.5
 - StateVar-1.1.1.1
+- syb-0.7
 - tagged-0.8.6
 - tasty-1.1.0.3
 - tasty-expected-failure-0.11.1.1
