--- a/stack-8.0.yaml
+++ b/stack-8.0.yaml
@@ -12,12 +12,14 @@ extra-deps:
 - git:    https://github.com/tmcdonell/accelerate.git
   commit: dc743a12753f3cd22c6f5184576112ed801e682b
 
+- git:    https://github.com/tmcdonell/nvvm.git
+  commit: aa74e43fe0dc754bc433c10318224ab8a8262515
+
 - Cabal-2.0.1.1
 - cuda-0.9.0.3
 - half-0.3
 - hashtables-1.2.3.0
 - lockfree-queue-0.2.3.1
-- nvvm-0.8.0.3
 - primitive-0.6.4.0
 - tasty-hedgehog-0.2.0.0
 
