--- a/stack-8.2.yaml
+++ b/stack-8.2.yaml
@@ -12,6 +12,9 @@ extra-deps:
 - git:    https://github.com/tmcdonell/accelerate.git
   commit: dc743a12753f3cd22c6f5184576112ed801e682b
 
+- git:    https://github.com/tmcdonell/nvvm.git
+  commit: aa74e43fe0dc754bc433c10318224ab8a8262515
+
 - half-0.3
 - primitive-0.6.4.0
 
