--- a/stack-8.4.yaml
+++ b/stack-8.4.yaml
@@ -15,7 +15,9 @@ extra-deps:
 - git:    https://github.com/tmcdonell/cuda.git
   commit: 9351c1fb8726d30a8f2d9154e3c840f7dd9d034a
 
-- nvvm-0.8.0.3
+- git:    https://github.com/tmcdonell/nvvm.git
+  commit: aa74e43fe0dc754bc433c10318224ab8a8262515
+
 - primitive-0.6.4.0
 
 # Override default flag values for local packages and extra-deps
