--- a/stack-8.6.yaml
+++ b/stack-8.6.yaml
@@ -1,118 +1,22 @@
 # For more information, see: https://github.com/commercialhaskell/stack/blob/release/doc/yaml_configuration.md
 # vim: nospell
 
-resolver: ghc-8.6.1
-compiler-check: match-exact
-allow-newer: true
+resolver: lts-13.1
 
 packages:
-- 'accelerate-llvm'
-- 'accelerate-llvm-native'
-- 'accelerate-llvm-ptx'
+- accelerate-llvm
+- accelerate-llvm-native
+- accelerate-llvm-ptx
 
 extra-deps:
 - git:    https://github.com/tmcdonell/accelerate.git
-  commit: 1ad3e1ed09b746106ef8a91fc4ec855832c894da
-
-- git:    https://github.com/tmcdonell/cuda.git
-  commit: caa8d6afe7d8cb0baa8fa3e0ca919f6a13889b23
-
-- git:    https://github.com/tmcdonell/nvvm.git
-  commit: aa74e43fe0dc754bc433c10318224ab8a8262515
+  commit: 3018b013bdb52ca96ae829def2da3ed62e8c0014
 
 - git :   https://github.com/llvm-hs/llvm-hs.git
   commit: 1e512dcf2a40d253a95d231b7991b48f1f2a8a9e
   subdirs:
     - llvm-hs
     - llvm-hs-pure
-
-# https://github.com/vincenthz/hs-memory/pull/68
-- git:    https://github.com/tmcdonell/hs-memory.git
-  commit: feee6256e19ed178dc75b071dc54983bc6320f26
-
-- abstract-deque-0.3
-- adjunctions-4.4
-- ansi-terminal-0.8.1
-- ansi-wl-pprint-0.6.8.2
-- async-2.2.1
-- atomic-primops-0.8.2
-- attoparsec-0.13.2.2
-- base-compat-0.10.4
-- base-orphans-0.8
-- basement-0.0.8
-- bifunctors-5.5.3
-- cabal-doctest-1.0.6
-- call-stack-0.1.0
-- cereal-0.5.7.0
-- clock-0.7.2
-- code-page-0.1.3
-- colour-2.3.4
-- comonad-5.0.4
-- concurrent-output-1.10.7
-- constraints-0.10.1
-- contravariant-1.5
-- cryptonite-0.25
-- data-default-class-0.1.2.0
-- distributive-0.6
-- dlist-0.8.0.5
-- exceptions-0.10.0
-- fail-4.9.0.0
-- file-embed-0.0.11
-- foundation-0.0.21
-- free-5.1
-- ghc-paths-0.1.0.9
-- half-0.3
-- happy-1.19.9
-- hashable-1.2.7.0
-- hashtables-1.2.3.1
-- haskell-lexer-1.0.2
-- hedgehog-0.6.1
-- integer-logarithms-1.0.2.2
-- invariant-0.5.1
-- kan-extensions-5.2
-- language-c-0.8.2
-- lens-4.17
-- libffi-0.1
-- lifted-async-0.10.0.3
-- lifted-base-0.2.3.12
-# - llvm-hs-6.3.0
-# - llvm-hs-pure-6.2.1
-- lockfree-queue-0.2.3.1
-- mintty-0.1.2
-- mmorph-1.1.2
-- monad-control-1.0.2.3
-- optparse-applicative-0.14.2.0
-- parallel-3.2.2.0
-- pretty-show-1.8.2
-- primitive-0.6.4.0
-- profunctors-5.3
-- random-1.1
-- reflection-2.1.4
-- resourcet-1.2.1
-- scientific-0.3.6.2
-- semigroupoids-5.3.1
-- semigroups-0.18.5
-- StateVar-1.1.1.1
-- tagged-0.8.6
-- tasty-1.1.0.3
-- tasty-expected-failure-0.11.1.1
-- tasty-hedgehog-0.2.0.0
-- tasty-hunit-0.10.0.1
-- terminal-size-0.3.2.1
-- th-abstraction-0.2.8.0
-- th-lift-0.7.11
-- transformers-base-0.4.5.2
-- transformers-compat-0.6.2
-- unbounded-delays-0.1.1.0
-- unique-0
-- unliftio-core-0.1.2.0
-- unordered-containers-0.2.9.0
-- utf8-string-1.0.1.1
-- uuid-types-1.0.3
-- vector-0.12.0.1
-- void-0.7.2
-- wcwidth-0.0.2
-- wl-pprint-annotated-0.1.0.1
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
