--- a/.travis.yml
+++ b/.travis.yml
@@ -79,8 +79,7 @@ matrix:
     #   compiler: "GHC HEAD"
     #   addons: { apt: { sources: [ hvr-ghc, ubuntu-toolchain-r-test ], packages: [ nvidia-cuda-toolkit, g++-4.8, ghc-head, cabal-install-head, happy-1.19.5, alex-3.1.7 ] }}
 
-  allow_failures:
-    - env: GHC=8.6.1 LLVM=6.0.0 CUDA=8.0.61-1
+  # allow_failures:
   #   - env: GHC=head CABAL=head LLVM=3.9.1
 
   fast_finish: true
@@ -115,21 +114,21 @@ before_install:
 
 install:
   # how much do we have to do?
-  - stack build --only-dependencies --no-terminal --dry-run
+  - stack build --only-dependencies --no-terminal --dry-run --flag accelerate:nofib
 
   # build dependencies
-  - travis_retry                stack build accelerate --fast --no-terminal --no-copy-bins --only-dependencies
-  - travis_retry travis_wait 60 stack build accelerate --fast --no-terminal --no-copy-bins
-  - travis_retry                stack build            --fast --no-terminal --no-copy-bins --only-dependencies --test
+  - travis_retry                stack build accelerate --fast --no-terminal --no-copy-bins --flag accelerate:nofib --only-dependencies
+  - travis_retry travis_wait 60 stack build accelerate --fast --no-terminal --no-copy-bins --flag accelerate:nofib
+  - travis_retry                stack build            --fast --no-terminal --no-copy-bins --flag accelerate:nofib --only-dependencies --test
 
 script:
-  - travis_retry stack build accelerate-llvm        --no-terminal --test --no-run-tests --haddock --no-haddock-deps
-  - travis_retry stack build accelerate-llvm-native --no-terminal --test --no-run-tests --haddock --no-haddock-deps
-  - travis_retry stack build accelerate-llvm-ptx    --no-terminal --test --no-run-tests --haddock --no-haddock-deps
+  - travis_retry stack build accelerate-llvm        --no-terminal --test --no-run-tests --haddock --no-haddock-deps --flag accelerate:nofib
+  - travis_retry stack build accelerate-llvm-native --no-terminal --test --no-run-tests --haddock --no-haddock-deps --flag accelerate:nofib
+  - travis_retry stack build accelerate-llvm-ptx    --no-terminal --test --no-run-tests --haddock --no-haddock-deps --flag accelerate:nofib
 
   # Run test suite(s)
   # only use a single test thread due to limited memory on the travis boxes
-  - stack test accelerate-llvm-native --test-arguments='--hedgehog-tests=50 --hedgehog-shrinks=0 --timeout=30s --num-threads=1'
+  - stack test accelerate-llvm-native --test-arguments='--hedgehog-tests=50 --hedgehog-shrinks=0 --timeout=30s --num-threads=1' --flag accelerate:nofib
 
 after_success:
   - source .travis/update-accelerate-buildbot.sh
